--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.1",
   "description": "tsconfig switch",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "app-root-path": "^2.2.1",
+    "i": "^0.3.6",
+    "npm": "^6.12.0"
+  },
   "devDependencies": {},
   "scripts": {},
   "files": [
