--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "copy file without overwrite",
   "main": "index.js",
   "dependencies": {
-    "app-root-path": "^2.2.1",
-    "i": "^0.3.6",
-    "npm": "^6.12.0"
+    "app-root-path": "^2.2.1"
   },
   "devDependencies": {},
   "scripts": {},
